# ridi_imu

./: LICENSE  README.md
cpp/: CMakeLists.txt
cpp/algorithm/: CMakeLists.txt  geometry.cc  geometry.h
cpp/cmake/: FindEigen.cmake  FindGflags.cmake  FindGlog.cmake  FindOpenMesh.cmake
cpp/imu_localization/: CMakeLists.txt  imu_localization.cc  imu_localization.h  imu_localization_cli.cc
cpp/imu_optimization/: CMakeLists.txt  imu_optimization.cc  imu_optimization.h  imu_optimization_cli.cc
cpp/speed_regression/: CMakeLists.txt  feature_target.cc  feature_target.h  model_wrapper.cc  model_wrapper.h  speed_regression_cli.cc
cpp/utility/: CMakeLists.txt  data_io.cc  data_io.h  utility.cc  utility.h
cpp/utility/stlplus3/: CMakeLists.txt
python/: gen_dataset.py  gen_dataset_nopose.py  geometry.py  icp.py  regression_cascade.py  training_data.py  write_trajectory_to_ply.py
